--- a/glossary.html.md.erb
+++ b/glossary.html.md.erb
@@ -9,7 +9,7 @@ Reading through this glossary should help you quickly become comfortable working
 | Term          | Definition   |
 | ------------- | ------------ |
 | Agent         | A process that runs continuously in VMs deployed by BOSH. The BOSH Agent executes tasks in response to messages it receives messages from the BOSH Director. |
-| Blobstore     | A repository where BOSH stores binary content at various times in the lifecycle of a BOSH release.|
+| Blobstore     | A repository where BOSH stores binary content at various times during the lifecycle of a BOSH release.|
 | CPI | A Cloud Provider Interface is a software layer between BOSH and an IaaS (cloud). |
 | Deploy        | BOSH deploys software to the cloud using a manifest, a stemcell, and a release. This sense of the verb "deploy" is unique to BOSH.|
 | Deployment    | An encapsulation of software and configuration that can be deployed to the cloud by BOSH. A BOSH deployment is a "thing" that can be replicated. Even though BOSH creates the deployment using ephemeral resources, the deployment is stable in that it continues to function when _insert better prose here_. A BOSH deployment is portable across different kinds of infrastructure (that is, across different CPIs). |
