add links, really

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -31,18 +31,11 @@ In general, BOSH avoids the complexity inherent in “bespoke” deployment prac
 Instead, BOSH offers simple and elegant ways to work.
 The topics that follow this one emphasize these efficient patterns.
 
-* The Glossary introduces the unique “language of BOSH” and should be useful to everyone.
+* The [Glossary](glossary.html) introduces the unique “language of BOSH” and is recommended as a starting point.
 
 * The other topics explain what you need to know about BOSH to create distributed software, deploy it to the cloud, and manage deployments.
 
-* There is separate documentation about deploying Cloud Foundry with BOSH.
-
-
-
-
-
-
-
+* There is separate documentation about [deploying Cloud Foundry with BOSH] (./deploying).
 
 
 
