fix a link again

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -35,7 +35,7 @@ The topics that follow this one emphasize these efficient patterns.
 
 * The other topics explain what you need to know about BOSH to create distributed software, deploy it to the cloud, and manage deployments.
 
-* There is separate documentation about [deploying Cloud Foundry with BOSH] (../deploying).
+* There is separate documentation about [deploying Cloud Foundry with BOSH] (../../deploying).
 
 
 
