--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -33,9 +33,6 @@ The topics that follow this one emphasize these efficient patterns.
 
 * The [Glossary](glossary.html) introduces the unique “language of BOSH” and is recommended as a starting point.
 
-* The other topics explain what you need to know about BOSH to create distributed software, deploy it to the cloud, and manage deployments.
+* Other topics explain what you need to know about BOSH to create distributed software, deploy it to the cloud, and manage deployments.
 
 * There is separate documentation about [deploying Cloud Foundry with BOSH] (../deploying/index.html).
-
-
-
