--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -27,11 +27,11 @@ This approach leads to convenience and efficiency as the following typical scena
 
 * When VMs fail, BOSH “resurrects” them on new VMs. BOSH discovers VM failures by comparing the actual state of the deployment with the intended state as described in the manifest.
 
-In general, BOSH avoids the complexity inherent in “bespoke” deployment practices.
+In general, BOSH avoids the complexity inherent in "bespoke" deployment practices.
 Instead, BOSH offers simple and elegant ways to work.
 The topics that follow this one emphasize these efficient patterns.
 
-* The [Glossary](glossary.html) introduces the unique “language of BOSH” and is recommended as a starting point.
+* The [Glossary](glossary.html) introduces the unique "language of BOSH" and is recommended as a starting point.
 
 * Other topics explain what you need to know about BOSH to create distributed software, deploy it to the cloud, and manage deployments.
 
