--- a/how-bosh-works.html.md.erb
+++ b/how-bosh-works.html.md.erb
@@ -2,7 +2,8 @@
 title: How BOSH Works
 ---
 
-BOSH is complex enough that it's a good idea to take your learning about it in stages.
+Once you know what the main elements of BOSH are and what they do,
+your understanding of BOSH will remain clear as you learn about supporting elements.
 
 ## <a id="high"></a>A High-Level View ##
 
@@ -19,59 +20,74 @@ Given these interactions, it makes sense that BOSH has:
 
 * A Command Line Interface (CLI) for communication with an operator.
 * A Director component that receives commands from the CLI, and in turn communicates with other BOSH components to realize the intent of the operator. The Director also keeps track of the state of the VMs.
-* A Blobstore where BOSH can store code that has been uploaded and needs to be deployed.
+* A Blobstore component where BOSH can store code that has been uploaded and needs to be deployed.
 * A Cloud Provider Interface (CPI) that BOSH uses to communicate with the cloud infrastructure.
 
 Finally, every VM for the service that was deployed using BOSH has a BOSH Agent.
 The Agent is a process that is always running when the VM is alive.
 BOSH communicates with a VM by "talking to" the Agent.
 
-This is a good basic picture of the main elements of BOSH.
-Naturally, there is more to know.
-For example:
+Now you know the main elements of BOSH.
+The components to be introduced next all exist to help the CLI, Director, Blobstore and CPI function as a system.
 
-* Each BOSH component runs on its own VM. Some components can have multiple instances (run on multiple VMs) to increase resilience, capacity, or both.
-* The CLI is scriptable, so BOSH can receive automated commands.
-* The Director is responsible for some system operations that are not directly initiated by the operator.
+## <a id="components"></a> Components in Supporting Roles  ##
 
-More importantly, there are additional BOSH components whose role is to support the main components in various ways.
+This section describes the smaller BOSH components that facilitate the work of the main elements.
 
-## <a id="deeper"></a>Looking Deeper ##
+### <a id="dns"></a> PowerDNS name server ###
+
+For internal communication between the VMs that it creates, BOSH allows named DNS records.
+This means that instead of an IP address, one component could communicate with another by a host and domain name, for example:
+
+  `http://postgres-db.my-deployment.com`
+
+PowerDNS is the Open Source DNS server that BOSH runs if you use this feature.
+
+### <a id="nats"></a> Messaging (NATS) ###
+
+The Director and the Agents communicate through a lightweight publish-subscribe and distributed queueing messaging system called NATS.
+Messages are posted both ways to confirm health of the agent and for the director to obtain changes in health of monitored processes.
+
+### <a id="postgres"></a> Postgres database ###
+
+The Director uses a Postgres database to store information about the desired state of the deployed system(s).
+This includes what releases are present, what has been deployed, what stemcells are available, and so on.
+
+### <a id="redis"></a> Redis key-value store ###
+
+The Director queues the names of tasks that it needs to run.
+The queue resides in a Redis key-value store.
+
+### <a id="registry"></a>Registry ###
+
+Agents obtain configuration information for their VMs, such as disk IDs and networking settings, in different ways depending on cloud infrastructure.
+Some cloud infrastructures use the Registry for this purpose.
+The process goes like this:
+
+# i talk to the IaaS and it says here’s your IP and stuff
+# … process puts that into registry
+# Agent can ask the Registry through its endpoint
+
+### <a id="hm"></a> Health Monitor  ###
+
+For a variety of reasons, VMs may die or otherwise get into a bad state.
+For example, if a process gobbles up all the resources available to a VM, the Agent for that VM can become unresponsive.
+
+Health Monitor continuously monitors the state of the VMs.
+Based on data from Health Monitor, two BOSH plugins can attempt to return VMs to a desired state.
+
+* The BOSH Resurrector can be enabled to automatically recreate VMs that disappear or whose Agent becomes unresponsive.
+* `bosh cck` is a CLI command that the user can run to fix various issues that can arise in a distributed system.
+
+pulls actual VM state from database and compares it with desired VM state as described in manifests, then queues tasks to recreate or VMs when needed
+
+### <a id="stem"></a> More about the Stemcell  ###
+
+_insert text here_
+
+## <a id="director"></a> more about the Director ##
 
 
-
-BOSH 
-
-* Router
-* Messaging (NATS)
-* PowerDNS name server
-* Worker VMs
-* Health Monitor 
-
-* Postgres database
-
-** actual VM state and compares it with desired VM state as described in manifests, then informs the Cloud Controller about any discrepancies.
-need better explanation
-including:
-plugin system
-Resurrector (plugin)
-when VM is gone or Agent unresponsive, works automatically
-BOSH CCK (part of CLI)
-replace “problem manager” with “Health Monitor” —> scrub story
-
-
-## <a id=""></a> ##
-
-Stemcell
-
-
-
-
-
-
-
-
-
-
-
+* Director worker processes
+When translating commands from the CLI into actionable tasks or running a scheduled process, the director chunks the work into processes that are then queued, and picked up by worker processes.  Those processes then do the heavy lifting to create VMs, provision VMs as a particular job, or whatever is needed at the time
 
