--- a/how-bosh-works.html.md.erb
+++ b/how-bosh-works.html.md.erb
@@ -64,9 +64,9 @@ Agents obtain configuration information for their VMs, such as disk IDs and netw
 Some cloud infrastructures use the Registry for this purpose.
 The process goes like this:
 
-# i talk to the IaaS and it says here’s your IP and stuff
-# … process puts that into registry
-# Agent can ask the Registry through its endpoint
+1. i talk to the IaaS and it says here’s your IP and stuff
+1. … process puts that into registry
+1. Agent can ask the Registry through its endpoint
 
 ### <a id="hm"></a> Health Monitor  ###
 
