--- a/how-bosh-works.html.md.erb
+++ b/how-bosh-works.html.md.erb
@@ -23,30 +23,46 @@ Given these interactions, it makes sense that BOSH has:
 * A Blobstore component where BOSH can store code that has been uploaded and needs to be deployed.
 * A Cloud Provider Interface (CPI) that BOSH uses to communicate with the cloud infrastructure.
 
-Finally, every VM for the service that was deployed using BOSH has a BOSH Agent.
+The Director translates commands from the CLI into actionable tasks, chunking the work into tasks that it then queues.
+Tasks are taken out of the queue and run by a special kind of BOSH process called a Worker.
+Creating and provisioning VMs are among the kinds of tasks that Workers perform.
+Besides tasks that originate with user commands, Workers perform tasks that the Director creates from scheduled system processes.
+
+Every VM for the service that was deployed using BOSH has a BOSH Agent.
 The Agent is a process that is always running when the VM is alive.
 BOSH communicates with a VM by "talking to" the Agent.
 
 Now you know the main elements of BOSH.
-The components to be introduced next all exist to help the CLI, Director, Blobstore and CPI function as a system.
+The components to be introduced next all exist to help the main elements function as a system.
 
 ## <a id="components"></a> Components in Supporting Roles  ##
 
-This section describes the smaller BOSH components that facilitate the work of the main elements.
+This section describes the BOSH components that facilitate the work of the CLI, Director, Blobstore and CPI.
+
+### <a id="hm"></a> Health Monitor  ###
+
+For a variety of reasons, VMs may die or otherwise get into a bad state.
+For example, if a process gobbles up all the resources available to a VM, the Agent for that VM can become unresponsive.
+
+Health Monitor continuously monitors the state of the VMs.
+Based on data from Health Monitor, two BOSH plugins can attempt to return VMs to a desired state.
+
+* The BOSH Resurrector can be enabled to automatically recreate VMs that disappear or whose Agent becomes unresponsive.
+* BOSH Cloud Check (`bosh cck`) is a CLI command that the user can run to fix a wide variety issues that can arise in a distributed system.
+
+### <a id="nats"></a> Messaging (NATS) ###
+
+The Director and the Agents communicate through a lightweight publish-subscribe and distributed queueing messaging system called NATS.
+These messages have two purposes: to confirm the health of the Agent, and to inform the Director about changes in the health of monitored processes.
 
 ### <a id="dns"></a> PowerDNS name server ###
 
 For internal communication between the VMs that it creates, BOSH allows named DNS records.
 This means that instead of an IP address, one component could communicate with another by a host and domain name, for example:
 
-  `http://postgres-db.my-deployment.com`
+    `http://postgres-db.my-deployment.com`
 
 PowerDNS is the Open Source DNS server that BOSH runs if you use this feature.
-
-### <a id="nats"></a> Messaging (NATS) ###
-
-The Director and the Agents communicate through a lightweight publish-subscribe and distributed queueing messaging system called NATS.
-Messages are posted both ways to confirm health of the agent and for the director to obtain changes in health of monitored processes.
 
 ### <a id="postgres"></a> Postgres database ###
 
@@ -60,34 +76,24 @@ The queue resides in a Redis key-value store.
 
 ### <a id="registry"></a>Registry ###
 
-Agents obtain configuration information for their VMs, such as disk IDs and networking settings, in different ways depending on cloud infrastructure.
+When a VM is created, it has no "awareness" of its own IP address or other vital information, including:
+
+* an ID for the VM
+* an ID for the volume reserved for the VM
+* IDs for disks and other devices
+* the network interface IP
+
+Agents obtain configuration information for their VMs in different ways, depending on cloud infrastructure.
 Some cloud infrastructures use the Registry for this purpose.
-The process goes like this:
+Agents send requests to the Registry through its HTTP endpoint.
 
-1. i talk to the IaaS and it says here’s your IP and stuff
-1. … process puts that into registry
-1. Agent can ask the Registry through its endpoint
+The interaction between IaaS, Agent, Registry, and Worker follows this pattern:
 
-### <a id="hm"></a> Health Monitor  ###
+1. Through the CPI, a Worker tells the IaaS to create or update a VM.
+1. The IaaS provides the Worker with information the VM needs.
+1. The Worker updates the Registry with the information.
+1. The Agent sends an information request to the Registry.
+1. The Registry responds by providing the requested information.
+1. The Agent uses the information to configure the VM.
 
-For a variety of reasons, VMs may die or otherwise get into a bad state.
-For example, if a process gobbles up all the resources available to a VM, the Agent for that VM can become unresponsive.
-
-Health Monitor continuously monitors the state of the VMs.
-Based on data from Health Monitor, two BOSH plugins can attempt to return VMs to a desired state.
-
-* The BOSH Resurrector can be enabled to automatically recreate VMs that disappear or whose Agent becomes unresponsive.
-* `bosh cck` is a CLI command that the user can run to fix various issues that can arise in a distributed system.
-
-pulls actual VM state from database and compares it with desired VM state as described in manifests, then queues tasks to recreate or VMs when needed
-
-### <a id="stem"></a> More about the Stemcell  ###
-
-_insert text here_
-
-## <a id="director"></a> more about the Director ##
-
-
-* Director worker processes
-When translating commands from the CLI into actionable tasks or running a scheduled process, the director chunks the work into processes that are then queued, and picked up by worker processes.  Those processes then do the heavy lifting to create VMs, provision VMs as a particular job, or whatever is needed at the time
 
