remove pages superseded by How BOSH Works

--- a/how-bosh-works.html.md.erb
+++ b/how-bosh-works.html.md.erb
@@ -7,7 +7,7 @@ The topic starts by outlining the major elements in BOSH and goes on to detail s
 ## <a id="high"></a>A High-Level View of BOSH ##
 
 To understand BOSH, start by assuming that for each major area of functionality, BOSH has a component.
-When you think about what BOSH does, you can build up a portrait of BOSH component by component.
+Then as you explore what BOSH does, you can build up a portrait of BOSH component by component.
 
 Consider the interactions between BOSH and an operator, a cloud, and a distributed service that has been deployed to the cloud using BOSH.
 
