make it's out of it is

--- a/what-bosh-is.html.md.erb
+++ b/what-bosh-is.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: What BOSH is and Why it is Different
+title: What BOSH is and Why it's Different
 ---
 
 BOSH is an open source tool chain for release engineering, deployment, and lifecycle management of large-scale distributed services.
