add link to glossary

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -2,6 +2,7 @@
 title: BOSH
 ---
 
+* [Glossary](glossary.html)
 * [What BOSH is and Why it's Different](what-bosh-is.html)
 * [How BOSH Works](how-bosh-works.html)
 * [Local Setup](setup/index.html)
