fix broken anchor

--- a/glossary.html.md.erb
+++ b/glossary.html.md.erb
@@ -19,7 +19,7 @@ Reading through this glossary should help you quickly become comfortable working
 | Manifest | A YAML file that identifies a release and a stemcell and specifies how to configure them for a given deployment. |
 | MicroBOSH | An essentially complete BOSH that runs within a single VM. One use of the MicroBOSH is to orchestrate the deployment of a full BOSH.|
 | Release | A collection of packages and accompanying information needed to make a software component deployable by BOSH. This sense of the noun "release" is unique to BOSH. |
-| Stemcell | A generic VM image that BOSH instantiates and configures to realize a deployment. A stemcell is a template from which BOSH creates whatever VMs are needed for a wide variety of components and products. |
+| <a id="stemcell"></a>Stemcell | A generic VM image that BOSH instantiates and configures to realize a deployment. A stemcell is a template from which BOSH creates whatever VMs are needed for a wide variety of components and products. |
 | Task | The basic unit of work performed by BOSH. You can get the status and logs for any task. You can monitor the task throughout its lifecycle, which progresses through states like started, running, ended, and failed. This sense of the noun "task" is unique to BOSH. |
 
 
